package(
    default_visibility = ["//visibility:public"],
)


exports_files([
    "maven_install.json",
])

alias(
    name = "tsconfig.json",
    actual = "//defs/toolchain/js:tsconfig.json",
)

alias(
    name = "jdk9",
    actual = "//defs/toolchain:java",
)

alias(
    name = "docs",
    actual = "//defs:gust-docs",
)

