package(
    default_visibility = ["//visibility:public"],
)

load(
    "@io_bazel_stardoc//stardoc:stardoc.bzl",
    "stardoc",
)


stardoc(
    name = "gust-docs",
    input = "docs.bzl",
    out = "docs.md",
    deps = [
        "@rules_java//:bzl",
        "@rules_proto//:bzl",
        "@rules_python//:bzl",
        "@io_bazel_rules_closure//:bzl",
    ],
    symbol_names = [
        # Frontend: JS
#        "js_test",
#        "js_module",
#        "js_app",

        # Frontend: Styles
#        "style_library",
#        "style_binary",

        # Backend: JDK (Java/Kotlin)
#        "jdk_test",
#        "jdk_library",
#        "jdk_binary",

        # Backend: Micronaut
#        "micronaut_test",
#        "micronaut_library",
#        "micronaut_application",

        # Tools: Protos
        "proto",
        "proto_module",
    ],
)
