##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "@io_bazel_stardoc//stardoc:stardoc.bzl",
    "stardoc",
)


stardoc(
    name = "gust-docs",
    input = "docs.bzl",
    out = "docs.md",
    symbol_names = [
        # Frontend: JS
        "js_test",
        "js_module",
        "js_app",

        # Frontend: Styles
        "style_library",
        "style_binary",

        # Backend: JDK (Java/Kotlin)
        "jdk_test",
        "jdk_library",
        "jdk_binary",

        # Backend: Micronaut
        "micronaut_test",
        "micronaut_library",
        "micronaut_application",

        # Tools: Protos
        "proto",
        "proto_module",
    ],
)
