package(
    default_visibility = ["//visibility:public"],
)

load(
    "@rules_java//java:defs.bzl",
    "java_library",
)

java_library(
    name = "gustlib",
    exports = [
        "//java/gust:Core",
    ],
)

alias(
    name = "entrypoint",
    actual = "//java/gust/backend:backend",
)

alias(
    name = "framework",
    actual = ":gustlib",
)
