package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain/java:rules.bzl",
    "jdk_library",
)


jdk_library(
    name = "gust",
    exports = [
        "//java/gust:Core",
    ],
)

alias(
    name = "javadoc",
    actual = "//java/gust:javadoc",
)

alias(
    name = "entrypoint",
    actual = "//java/gust/backend:backend",
)

alias(
    name = "framework",
    actual = ":gust",
)

alias(
    name = "framework-javadoc",
    actual = ":javadoc",
)
