##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)


exports_files([
    "logback.xml",
])

test_suite(
    name = "suite",
    testonly = True,
    tests = [
        "//javatests/gust:DualStackTest",
        "//javatests/gust/backend:ApplicationTest",
        "//javatests/gust/backend:NoConfigTest",
        "//javatests/gust/backend:PageContextTest",
        "//javatests/gust/backend:TemplateProviderTest",
        "//javatests/gust/backend/runtime:LoggingTest",
        "//javatests/gust/backend/runtime:ReactiveFutureTest",
        "//javatests/gust/backend/model:CollapsedMessageTest",
        "//javatests/gust/backend/model:EncodedModelTest",
        "//javatests/gust/backend/model:ModelExceptionTest",
        "//javatests/gust/backend/model:ModelMetadataTest",
        "//javatests/gust/backend/model:ModelOptionsTest",
        "//javatests/gust/backend/model:PersistenceDriverTest",
        "//javatests/gust/backend/model:ProtoModelCodecTest",
        "//javatests/gust/backend/driver/inmemory:InMemoryAdapterTest",
        "//javatests/gust/backend/driver/inmemory:InMemoryAdapterNoopCacheTest",
        "//javatests/gust/backend/driver/inmemory:InMemoryAdapterWithCacheTest",
        "//javatests/gust/backend/driver/inmemory:InMemoryCacheTest",
        "//javatests/gust/backend/driver/inmemory:InMemoryDriverTest",
    ],
)
