##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)


## Condition: `release`
## ------------------------
## Activates when optimizations are turned on.
config_setting(
    name = "release",
    values = {
        "compilation_mode": "opt",
    },
)


## Condition: `dev`
## ------------------------
## Activates when optimizations are turned off and debug mode is turned on.
config_setting(
    name = "dev",
    values = {
        "compilation_mode": "dbg",
    },
)


## Condition: `style_renaming`
## ------------------------
## Activates when style renaming should be on.
config_setting(
    name = "style_renaming",
    values = {"style_renaming": "active"},
    visibility = ["//visibility:public"],
)


## Condition: `zulu`
## ------------------------
## Activates when we are running in IntelliJ/locally.
config_setting(
    name = "zulu",
    define_values = {"jdk": "zulu"},
)
