package(
    default_visibility = ["//visibility:public"],
)


## Condition: `LOCAL`
## ------------------------
## Activates when we are running against local dependencies.
config_setting(
    name = "local",
    define_values = {"dependencies": "local"},
    visibility = ["//visibility:public"],
)


## Condition: `DEBUG`
## ------------------------
## Activates when we are running in debug mode.
config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
    visibility = ["//visibility:public"],
)


## Condition: `RELEASE`
## ------------------------
## Activates when we are running in production build mode.
config_setting(
    name = "release",
    values = {"compilation_mode": "opt"},
    visibility = ["//visibility:public"],
)


## Condition: `DEV`
## ------------------------
## Activates when we are running in production build mode.
config_setting(
    name = "dev",
    values = {"compilation_mode": "dbg"},
    define_values = {"dev": "enabled"},
    visibility = ["//visibility:public"],
)
