##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)


## Condition: `DEBUG`
## ------------------------
## Activates when we are running in debug mode.
config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
    visibility = ["//visibility:public"],
)

## Condition: `RELEASE`
## ------------------------
## Activates when we are running in production build mode.
config_setting(
    name = "release",
    values = {"compilation_mode": "opt"},
    visibility = ["//visibility:public"],
)

## Condition: `DEV`
## ------------------------
## Activates when we are running in production build mode.
config_setting(
    name = "dev",
    values = {"compilation_mode": "dbg"},
    define_values = {"dev": "enabled"},
    visibility = ["//visibility:public"],
)

## Condition: `live_reload`
## ------------------------
## Activates when running locally, in development mode, via `ibazel`.
config_setting(
    name = "live_reload",
    values = {"compilation_mode": "dbg"},
    define_values = {
        "dev": "enabled",
        "LIVE_RELOAD": "enabled",
    },
    visibility = ["//visibility:public"],
)
