package(
    default_visibility = ["//visibility:public"],
)

load(
    "@bazel_skylib//:bzl_library.bzl",
    "bzl_library",
)


bzl_library(
    name = "rules",
    srcs = [
        "backend.bzl",
        "crosslib.bzl",
        "deps.bzl",
        "frontend.bzl",
    ],
)


## -- Public Interface -- ##


## Java Runtime
## ------------------------
## References the active Java runtime.
alias(
    name = "java",
    actual = "//defs/toolchain/java:java_runtime",
)
