##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
    "model_package",
)

load(
    "//defs/toolchain:templates.bzl",
    "template_library",
)

## Base Models
model(
    name = "language_proto",
    srcs = ["language.proto"],
)


model_package(
    name = "base",
    deps = [
        ":language_proto",
    ],
    _internal = True,
)


## Base Templates
template_library(
    name = "language_soy",
    srcs = ["language.soy"],
    proto_deps = [":language_proto"],
    java_package = "gust.core.language",
)
