package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
    "model_package",
)

## Core
model(
    name = "datamodel",
    srcs = ["datamodel.proto"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
    _internal = True,
)


model_package(
    name = "core",
    deps = [":datamodel"],
    _internal = True,
)
