##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
    "model_package",
)

load(
    "//defs/toolchain:schema.bzl",
    _well_known = "well_known_",
)


##
# Builtin protos
##

alias(
    name = "any",
    actual = "any_proto",
)

_well_known(
    name = "any_proto",
    actual = "@com_google_protobuf//:any_proto",
)

alias(
    name = "duration",
    actual = "duration_proto",
)

_well_known(
    name = "duration_proto",
    actual = "@com_google_protobuf//:duration_proto",
)

alias(
    name = "empty",
    actual = "empty_proto",
)

_well_known(
    name = "empty_proto",
    actual = "@com_google_protobuf//:empty_proto",
)

alias(
    name = "field_mask",
    actual = "field_mask_proto",
)

_well_known(
    name = "field_mask_proto",
    actual = "@com_google_protobuf//:field_mask_proto",
)

alias(
    name = "struct",
    actual = "struct_proto",
)

_well_known(
    name = "struct_proto",
    actual = "@com_google_protobuf//:struct_proto",
)

alias(
    name = "timestamp",
    actual = "timestamp_proto",
)

_well_known(
    name = "timestamp_proto",
    actual = "@com_google_protobuf//:timestamp_proto",
)

alias(
    name = "wrappers",
    actual = "wrappers_proto",
)

_well_known(
    name = "wrappers_proto",
    actual = "@com_google_protobuf//:wrappers_proto",
)


##
# Common protos
##

alias(
    name = "timeofday",
    actual = "timeofday_proto",
)

_well_known(
    name = "timeofday_proto",
    actual = "@proto_common//:type_timeofday",
)

alias(
    name = "quaternion",
    actual = "quaternion_proto",
)

_well_known(
    name = "quaternion_proto",
    actual = "@proto_common//:type_quaternion",
)

alias(
    name = "postal_address",
    actual = "postal_address_proto",
)

_well_known(
    name = "postal_address_proto",
    actual = "@proto_common//:type_postal_address",
)

alias(
    name = "month",
    actual = "month_proto",
)

_well_known(
    name = "month_proto",
    actual = "@proto_common//:type_month",
)

alias(
    name = "latlng",
    actual = "latlng_proto",
)

_well_known(
    name = "latlng_proto",
    actual = "@proto_common//:type_latlng",
)

alias(
    name = "fraction",
    actual = "fraction_proto",
)

_well_known(
    name = "fraction_proto",
    actual = "@proto_common//:type_fraction",
)

alias(
    name = "expr",
    actual = "expr_proto",
)

_well_known(
    name = "expr_proto",
    actual = "@proto_common//:type_expr",
)

alias(
    name = "dayofweek",
    actual = "dayofweek_proto",
)

_well_known(
    name = "dayofweek_proto",
    actual = "@proto_common//:type_dayofweek",
)

alias(
    name = "date",
    actual = "date_proto",
)

_well_known(
    name = "date_proto",
    actual = "@proto_common//:type_date",
)

alias(
    name = "color",
    actual = "color_proto",
)

_well_known(
    name = "color_proto",
    actual = "@proto_common//:type_color",
)

alias(
    name = "calendar_period",
    actual = "calendar_period_proto",
)

_well_known(
    name = "calendar_period_proto",
    actual = "@proto_common//:type_calendar_period",
)


## Core
model(
    name = "crypto",
    srcs = ["crypto.proto"],
    _internal = True,
    deps = [
        ":datamodel",
    ],
)

model(
    name = "data",
    srcs = ["data.proto"],
    _internal = True,
    deps = [
        ":crypto",
        ":datamodel",
    ],
)

model(
    name = "datamodel",
    srcs = ["datamodel.proto"],
    _internal = True,
    strip_import_prefix = "/gust/",
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)


model_package(
    name = "core",
    _internal = True,
    deps = [
        ":crypto",
        ":data",
        ":datamodel",
    ],
)
