##
# Copyright © 2020, The Gust Framework Authors. All rights reserved.
#
# The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
# are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
# this code in object or source form requires and implies consent and agreement to that license in principle and
# practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
# Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
# Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
# by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
# is strictly forbidden except in adherence with assigned license requirements.
##

package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
)

load(
    "//defs/toolchain:templates.bzl",
    "template_library",
)


## Page Models
model(
    name = "media_proto",
    srcs = ["media.proto"],
)

model(
    name = "semantic_proto",
    srcs = ["semantic.proto"],
    deps = [":media_proto"],
)

model(
    name = "page_proto",
    srcs = ["page.proto"],
    deps = [
        ":semantic_proto",
        "//gust/core:data",
        "//gust/base:language_proto",
        "@safe_html_types//:proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ]
)

## Page Templates
template_library(
    name = "page_soy",
    srcs = ["page.soy"],
    java_package = "gust.page",
    proto_deps = [
        ":page_proto",
        "//gust/core:datamodel",
    ],
    soy_deps = [
        "//gust/base:language_soy",
        "//gust/dom:assets_soy",
    ]
)
