package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:crosslib.bzl",
    "cross_lib",
)

load(
    "@com_google_j2cl//build_defs:rules.bzl",
    "j2cl_library",
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_module",
)

load(
    "@rules_java//java:defs.bzl",
    "java_library",
)


exports_files([
    "application.yml",
    "log4j2.xml",
])

java_library(
    name = "package-info",
    srcs = ["package-info.java"],
)

js_module(
    name = "CoreModule",
    srcs = ["module.js"],
)

cross_lib(
    name = "Core",
    srcs = [
        "Core.java",
    ],
    jdeps = [
        ":package-info",
    ],
    jsdeps = [
        ":CoreModule",
    ]
)

js_module(
    name = "core",
    exports = [
        ":Core-j2cl",
        ":CoreModule",
    ]
)
