package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:crosslib.bzl",
    "cross_lib",
)

load(
    "@com_google_j2cl//build_defs:rules.bzl",
    "j2cl_library",
)

load(
    "//defs/toolchain:frontend.bzl",
    "js_module",
)

load(
    "@rules_java//java:defs.bzl",
    "java_library",
)

load(
    "//defs/toolchain/java:docs.bzl",
    "javadoc_library",
    "javadoc_zipfile",
)

load(
    "//defs/toolchain/java:repos.bzl",
    "ALL_DEPENDENCIES",
)

load(
    "//defs/toolchain:deps.bzl",
    "maven",
    "javaproto",
)


exports_files([
    "application.yml",
    "logback.xml",
])

java_library(
    name = "package-info",
    srcs = ["package-info.java"],
)

js_module(
    name = "CoreModule",
    srcs = ["module.js"],
)

cross_lib(
    name = "Core",
    srcs = [
        "Core.java",
        "Core.native.js",
    ],
    jdeps = [
        ":package-info",
    ],
    jsdeps = [
        ":CoreModule",
    ],
)

js_module(
    name = "core",
    exports = [
        ":Core-j2cl",
        ":CoreModule",
    ],
)

filegroup(
    name = "sources",
    srcs = glob([
      "*.java"
    ]) + [
        "//java/gust/backend:sources",
    ]
)

javadoc_library(
    name = "javadoc",
    srcs = [
        ":sources",
    ],
    deps = ALL_DEPENDENCIES + [
        javaproto("//gust/core:datamodel"),
        javaproto("//gust/page:page_proto"),
    ],
    bottom_text = "Copyright (©) 2020, The Gust Framework Authors",
    doctitle = "GUST Framework",
    extra_args = [
        "-html5",
        "-author",
        "-charset", "UTF8",
        "-docencoding", "UTF8",
        "-keywords",
        "-docfilessubdirs",
        "-linksource",
    ],
    exclude_packages = [
        "javatests",
    ],
)
