package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:backend.bzl",
    "werkzeug_test",
    "werkzeug_library",
    "werkzeug_application",
    "micronaut_test",
    "micronaut_library",
    "micronaut_application",
)


## Server: Java
micronaut_library(
    name = "BasicJavaController",
    srcs = ["JavaController.java"],
    deps = ["//java/gust:Core"],
)

micronaut_library(
    name = "BasicKotlinController",
    srcs = ["KotlinController.kt"],
    deps = ["//java/gust:Core"],
)

micronaut_library(
    name = "VersionController",
    srcs = ["VersionController.kt"],
    deps = ["//java/gust:Core"],
)

micronaut_application(
    name = "BasicTestApplication",
    main_class = "gust.backend.Application",
    controllers = [
        ":BasicJavaController",
        ":BasicKotlinController",
        ":VersionController",
    ],
)


## Server: Python
werkzeug_application(
    name = "basic_py",
    entry_point = "basic.py",
)


## Tests: Micronaut
micronaut_test(
    name = "BasicServerTest",
    srcs = ["BasicServerTest.java"],
    test_class = "javatests.server.BasicServerTest",
    deps = [
        ":BasicJavaController",
        ":BasicKotlinController",
        ":VersionController",
    ],
)

micronaut_test(
    name = "BrowserBasicServerTest",
    srcs = ["BrowserBasicServerTest.kt"],
    browser = True,  # run this test in the browser
    test_class = "javatests.server.BrowserBasicServerTest",
    deps = [
        ":BasicJavaController",
        ":BasicKotlinController",
        ":VersionController",
    ],
)
