
load(
    "//defs/toolchain:templates.bzl",
    "template_library",
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
)


model(
    name = "person_name",
    srcs = ["person_name.proto"],
)

model(
    name = "template_context",
    srcs = ["template_context.proto"],
    deps = [":person_name"],
)

template_library(
    name = "simple",
    srcs = ["simple.soy"],
)

template_library(
    name = "second",
    srcs = ["second.soy"],
    soy_deps = [
        ":simple",
    ],
    proto_deps = [
        ":template_context",
    ]
)
