package(
    default_visibility = ["//visibility:public"],
)

load(
    "//defs/toolchain:schema.bzl",
    "model",
)

load(
    "//defs/toolchain:templates.bzl",
    "template_library",
)

load(
    "//defs/toolchain:backend.bzl",
    "werkzeug_test",
    "werkzeug_library",
    "werkzeug_application",
    "micronaut_test",
    "micronaut_library",
    "micronaut_controller",
    "micronaut_application",
)


model(
    name = "salutation",
    srcs = ["salutation.proto"],
)

model(
    name = "context",
    srcs = ["context.proto"],
    deps = [":salutation"],
)

template_library(
    name = "ssr",
    srcs = ["ssr.soy"],
    proto_deps = [":context"],
)

micronaut_controller(
    name = "SSRKotlinController",
    srcs = ["SSRKotlinController.kt"],
    protos = [":context"],
    templates = [":ssr"],
)

micronaut_application(
    name = "SSRTestApplication",
    native = True,
    controllers = [":SSRKotlinController"],
    repository = "$(project)/gust/tests/ssr/jvm",
    native_repository = "$(project)/gust/tests/ssr/native",
)

micronaut_test(
    name = "SSRBasicTest",
    srcs = ["SSRBasicTest.java"],
    deps = [":SSRKotlinController"],
    test_class = "javatests.ssr.SSRBasicTest",
)
